--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -14,12 +14,15 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
+      <h1 class="title">Menu</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close ng-click="login()">
+        <ion-item menu-close ng-if="false == userAuthenticated" ng-click="showlogin()">
           Login
+        </ion-item>
+        <ion-item menu-close ng-if="true == userAuthenticated" ng-click="logout()">
+          Logout
         </ion-item>
         <ion-item menu-close href="#/app/leaves">
           Leaves
