--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,10 @@
 /* Empty. Add your own CSS if you like */
+
+.has-errors {
+    border-left: 3px solid #cc2511;
+    border-right: 3px solid #cc2511;
+}
+.no-errors {
+    border-left: 3px solid #3d8b3d;
+    border-right: 3px solid #3d8b3d;
+}
