--- a/www/templates/leaves.html
+++ b/www/templates/leaves.html
@@ -1,5 +1,13 @@
-<ion-view view-title="Leaves">
-  <ion-content>
-    <h1>Apply leaves here</h1>
-  </ion-content>
+<ion-view view-title="Title!">
+    <ion-tabs class="tabs-positive tabs-icon-top">
+		<ion-tab title="Apply" ui-sref="app.leaves.apply" icon-on="ion-ios-color-wand" icon-off="ion-ios-color-wand-outline">
+			<ion-nav-view name="applyLeaveTab">
+	  		</ion-nav-view>
+	  	</ion-tab>
+
+	  	<ion-tab title="View" ui-sref="app.leaves.view" icon-on="ion-ios-eye-outline" icon-off="ion-ios-eye-outline">
+	  		<ion-nav-view name="viewLeavesTab">
+	  		</ion-nav-view>
+	  </ion-tab>
+	</ion-tabs>
 </ion-view>
