--- a/www/templates/viewleaves.html
+++ b/www/templates/viewleaves.html
@@ -1,5 +1,32 @@
 <ion-view view-title="View Leaves">
-  <ion-content>
-    You can view leaves here
-  </ion-content>
+<ion-content>
+<div class="list card" ng-repeat="leave in leaves.list">
+
+	<div class="item item-icon-left">
+		<i ng-if="leave.isApproved" class="icon ion-checkmark-round approved-color"> </i>
+		<i ng-if="leave.isRejected" class="icon ion-close-round rejected-color"> </i>
+		<i ng-if="leave.isRejected == false && leave.isApproved == false" class="icon ion-alert waiting-color"> </i>
+		<h2 ng-if="leave.to != null">{{leave.from | date:'mediumDate'}} to {{leave.to | date:'mediumDate'}}</h2>
+		<h2 ng-if="leave.to == null">{{leave.from | date:'mediumDate'}}</h2>
+		<p ng-if="leave.isApproved">Approved by {{leave.inspectedBy}}</p>
+		<p ng-if="leave.isRejected">Rejected by {{leave.inspectedBy}}</p>
+		<p ng-if="leave.isRevoked">You've revoked this</p>
+		<p ng-if="leave.isRevoked == false && leave.isApproved == false && leave.isRejected == false">Waiting for inspection</p>
+	</div>
+
+	<div class="item item-body">
+		<p>
+			{{leave.reason}}
+		</p>
+		<div class="card-status-bar">
+			<p style="margin-top:0; margin-bottom:0" >Applied on {{leave.createdOn | date:'mediumDate'}}</p>
+			<p style="margin-top:0; margin-bottom:0"  ng-if="leave.isApproved">Approved on {{leave.inspectedOn | date:'mediumDate'}}</p>
+			<p style="margin-top:0; margin-bottom:0"  ng-if="leave.isRejected">Rejected on {{leave.inspectedOn | date:'mediumDate'}}</p>
+			<p style="margin-top:0; margin-bottom:0"  ng-if="leave.isRevoked">Revoked on {{leave.revokedOn | date:'mediumDate'}}</p>
+		</div>
+	</div>
+  	<button class="button button-calm button-full" style="margin-bottom:0px; margin-top:0px" ng-disabled="leave.isRevoked">Revoke</button>
+
+</div>
+</ion-content>
 </ion-view>
