--- a/www/templates/viewleaves.html
+++ b/www/templates/viewleaves.html
@@ -3,13 +3,13 @@
 <div class="list card" ng-repeat="leave in leaves.list">
 
 	<div class="item item-icon-left">
-		<i ng-if="leave.isApproved" class="icon ion-checkmark-round approved-color"> </i>
-		<i ng-if="leave.isRejected" class="icon ion-close-round rejected-color"> </i>
-		<i ng-if="leave.isRejected == false && leave.isApproved == false" class="icon ion-alert waiting-color"> </i>
+		<i ng-if="leave.isApproved && leave.isRevoked == false" class="icon ion-checkmark-round approved-color"> </i>
+		<i ng-if="leave.isRejected && leave.isRevoked == false" class="icon ion-close-round rejected-color"> </i>
+		<i ng-if="(leave.isRejected == false && leave.isApproved == false) || leave.isRevoked" class="icon ion-alert waiting-color"> </i>
 		<h2 ng-if="leave.to != null">{{leave.from | date:'mediumDate'}} to {{leave.to | date:'mediumDate'}}</h2>
 		<h2 ng-if="leave.to == null">{{leave.from | date:'mediumDate'}}</h2>
-		<p ng-if="leave.isApproved">Approved by {{leave.inspectedBy}}</p>
-		<p ng-if="leave.isRejected">Rejected by {{leave.inspectedBy}}</p>
+		<p ng-if="leave.isApproved && !leave.isRevoked">Approved by {{leave.inspectedBy}}</p>
+		<p ng-if="leave.isRejected && !leave.isRevoked">Rejected by {{leave.inspectedBy}}</p>
 		<p ng-if="leave.isRevoked">You've revoked this</p>
 		<p ng-if="leave.isRevoked == false && leave.isApproved == false && leave.isRejected == false">Waiting for inspection</p>
 	</div>
@@ -25,7 +25,7 @@
 			<p style="margin-top:0; margin-bottom:0"  ng-if="leave.isRevoked">Revoked on {{leave.revokedOn | date:'mediumDate'}}</p>
 		</div>
 	</div>
-  	<button class="button button-calm button-full" style="margin-bottom:0px; margin-top:0px" ng-disabled="leave.isRevoked">Revoke</button>
+  	<button class="button button-calm button-full" style="margin-bottom:0px; margin-top:0px" ng-disabled="leave.isRevoked" ng-click="leaves.confirmRevoke(leave)">Revoke</button>
 
 </div>
 </ion-content>
