--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -15,6 +15,15 @@ $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
 
+$positive:                        #1F7FA1 !default; //dark blue
+$balanced:                        #16D5F7 !default; //light blue
+$energized:                       #FEF177 !default; //yellow
+$assertive:                       #FF3364 !default; //dark pink
+$royal:                           #1F7FA1 !default; //dark blue
+$dark:                            #444    !default; //black
+
+$button-energized-text:           #777 !default;
+
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
