--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,5 +1,6 @@
 <ion-view view-title="Login">
-  <ion-header-bar>
+  <ion-header-bar class="bar-royal item-icon-left">
+    <i class="icon ion-log-in"> </i>
     <h1 class="title">Login</h1>
   </ion-header-bar>
   <ion-content>
@@ -28,7 +29,7 @@
 
         <!-- Submit -->
         <label class="item">
-          <button class="button button-block button-full button-balanced" ng-disabled="loginForm.$invalid" type="submit">Log in</button>
+          <button class="button button-block button-full button-balanced rounded-corner" ng-disabled="loginForm.$invalid" type="submit">Log in</button>
         </label>
       </div>
     </form>
