--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="bar-royal">
       <ion-nav-back-button>
       </ion-nav-back-button>
 
@@ -13,16 +13,18 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
+    <ion-header-bar class="bar-royal">
       <h1 class="title">Menu</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
         <div ng-repeat="menuItem in menuItems">
-          <ion-item menu-close ng-if="menuItem.isLink" ng-href="{{menuItem.link}}">
+          <ion-item menu-close class="item-icon-right" ng-if="menuItem.isLink" ng-href="{{menuItem.link}}">
+            <i class="icon {{menuItem.icon}} balanced"> </i>
             {{menuItem.name}}
           </ion-item>
-          <ion-item menu-close ng-if="false == menuItem.isLink" ng-click="{{menuItem.clickAction}}">
+          <ion-item menu-close class="item-icon-right" ng-if="false == menuItem.isLink" ng-click="{{menuItem.clickAction}}">
+            <i class="icon {{menuItem.icon}} balanced"> </i>
             {{menuItem.name}}
           </ion-item>
         </div>
