--- a/www/templates/viewleaves.html
+++ b/www/templates/viewleaves.html
@@ -1,31 +1,30 @@
-<ion-view view-title="View Leaves">
+<ion-view view-title="View Leaves" syle="background-color: #1F7FA1;" >
 <ion-content>
 <div class="list card" ng-repeat="leave in leaves.list">
 
-	<div class="item item-icon-left item-divider">
+	<div class="item item-icon-left item-icon-right">
 		<i ng-if="leave.isApproved && leave.isRevoked == false" class="icon ion-checkmark-round approved-color"> </i>
 		<i ng-if="leave.isRejected && leave.isRevoked == false" class="icon ion-close-round rejected-color"> </i>
 		<i ng-if="(leave.isRejected == false && leave.isApproved == false) || leave.isRevoked" class="icon ion-alert waiting-color"> </i>
-		<h2 ng-if="leave.to != null">{{leave.from | date:'mediumDate'}} to {{leave.to | date:'mediumDate'}}</h2>
-		<h2 ng-if="leave.to == null">{{leave.from | date:'mediumDate'}}</h2>
+		<h3 ng-if="leave.to != null">{{leave.from | date:'mediumDate'}} to {{leave.to | date:'mediumDate'}}</h3>
+		<h3 ng-if="leave.to == null">{{leave.from | date:'mediumDate'}}</h3>
 		<p ng-if="leave.isApproved && !leave.isRevoked">Approved by {{leave.inspectedBy}}</p>
 		<p ng-if="leave.isRejected && !leave.isRevoked">Rejected by {{leave.inspectedBy}}</p>
 		<p ng-if="leave.isRevoked">Revoked on {{leave.revokedOn | date:'mediumDate'}}</p>
 		<p ng-if="leave.isRevoked == false && leave.isApproved == false && leave.isRejected == false">Waiting for inspection</p>
+		<i class="icon assertive" style="font-size: 14px;" ng-if="!leave.isRevoked && !leave.isRejected" ng-click="leaves.confirmRevoke(leave)">REVOKE</i>
 	</div>
 
-	<div class="item item-body">
+	<div class="item item-body item-divider">
 		<p>
 			{{leave.reason}}
 		</p>
 		<div class="card-status-bar">
-			<p style="margin-top:0; margin-bottom:0" >Applied on {{leave.createdOn | date:'mediumDate'}}</p>
-			<p style="margin-top:0; margin-bottom:0"  ng-if="leave.isApproved">Approved on {{leave.inspectedOn | date:'mediumDate'}}</p>
-			<p style="margin-top:0; margin-bottom:0"  ng-if="leave.isRejected">Rejected on {{leave.inspectedOn | date:'mediumDate'}}</p>
+			<h4 class="balanced" style="margin-top:0; margin-bottom:0" >Applied on {{leave.createdOn | date:'mediumDate'}}</h4>
+			<h4 class="balanced" style="margin-top:0; margin-bottom:0"  ng-if="leave.isApproved">Approved on {{leave.inspectedOn | date:'mediumDate'}}</h4>
+			<h4 class="balanced" style="margin-top:0; margin-bottom:0"  ng-if="leave.isRejected">Rejected on {{leave.inspectedOn | date:'mediumDate'}}</h4>
 		</div>
 	</div>
-  	<button class="button button-balanced button-full rounded-corner" style="margin-bottom:0px; margin-top:0px" ng-disabled="leave.isRevoked" ng-click="leaves.confirmRevoke(leave)">Revoke
-  	</button>
 
 </div>
 </ion-content>
