--- a/www/templates/leaveApproveFilters.html
+++ b/www/templates/leaveApproveFilters.html
@@ -1,19 +1,26 @@
 <div class="modal">
-    <ion-header-bar>
-      <h1 class="title">Edit Contact</h1>
-    </ion-header-bar>
-    <ion-content>
-      <div class="list">
-        <label class="item item-input">
-          <span class="input-label">Name</span>
-          <input type="text" ng-model="contact.name">
+  <ion-header-bar>
+    <h1 class="title">Filters</h1>
+  </ion-header-bar>
+  <ion-content>
+    <div class="list">
+      <!-- From date -->
+        <label class="item ">
+          <ionic-datepicker date="filterParams.from" min="minDate" max="maxDate" callback="filterParams.fromDateCallback">
+            From date: <button class="button button-block button-balanced rounded-corner"> {{ filterParams.from | date:'MMMM/dd/yyyy' }} </button>
+        </ionic-datepicker>
         </label>
-        <label class="item item-input">
-          <span class="input-label">Info</span>
-          <input type="text" ng-model="contact.info">
-        </label>
-      </div>
 
-      <button class="button button-full button-energized" ng-click="closeModal()">Done</button>
-    </ion-content>
-  </div>
+        <!-- To date -->
+        <label class="item ">
+          <ionic-datepicker date="filterParams.to" min="minDate" max="maxDate" callback="filterParams.toDateCallback">
+            To date: <button class="button button-block button-balanced rounded-corner"> {{ filterParams.to | date:'MMMM/dd/yyyy' }} </button>
+        </ionic-datepicker>
+        </label>
+    </div>
+    <div class="button-bar">
+      <a class="button button-assertive rounded-corner button-clear" style="text-decoration: underline;" ng-click="cancelFilters()">Cancel</a>
+      <a class="button button-balanced rounded-corner button-clear" style="text-decoration: underline;" ng-click="applyFilters()">Apply</a>
+    </div>
+  </ion-content>
+</div>
