--- a/www/templates/leaves.html
+++ b/www/templates/leaves.html
@@ -6,12 +6,12 @@
 	  		</ion-nav-view>
 	  	</ion-tab>
 
-		<ion-tab title="Apply" ng-if="!isLeader" ui-sref="app.leaves.apply" icon-on="ion-ios-color-wand" icon-off="ion-ios-color-wand-outline">
+		<ion-tab title="Apply" ui-sref="app.leaves.apply" icon-on="ion-ios-color-wand" icon-off="ion-ios-color-wand-outline">
 			<ion-nav-view name="applyLeaveTab">
 	  		</ion-nav-view>
 	  	</ion-tab>
 
-	  	<ion-tab title="View" ng-if="!isLeader" ui-sref="app.leaves.view" icon-on="ion-ios-eye-outline" icon-off="ion-ios-eye-outline">
+	  	<ion-tab title="View" ui-sref="app.leaves.view" icon-on="ion-ios-eye-outline" icon-off="ion-ios-eye-outline">
 	  		<ion-nav-view name="viewLeavesTab">
 	  		</ion-nav-view>
 	  	</ion-tab>
